# Horus

./: .gitignore  requirements.txt  start.bat  start.py  start.sh  temp.md
docs/: UI优化清单.md  tauri-migration-plan.md  前端代码审查.md  后端管线审查.md  推理存储审查.md  早筛体验优化.md  消融实验.md  系统介绍.md
engine/: README.md  pyproject.toml
engine/adhd_engine/: __init__.py  config.py  server.py
engine/adhd_engine/api/: games.py  sessions.py  state.py  stream.py  subjects.py
engine/adhd_engine/ipc/: bridge.py  messages.py
engine/adhd_engine/storage/: db.py  models.py  repo.py
engine/adhd_engine/worker/: fonts.py  gaze_system.py  inference.py  runner.py  sternberg.py
engine/docs/: ws_protocol.md
engine/tests/: test_capture_worker.py  test_distractor_resolution.py  test_end_to_end.py  test_inference_unit.py  test_ipc_bridge.py  test_worker_init.py
eyetrack package/eye_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/: lib_burst_generated.txt
eyetrack package/eye_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level1  resources.assets  resources.resource  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.assets
frontend/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
frontend/.temp/node-compile-cache/v24.12.0-x64-cf738c9d/: 006ff251  00a1f1c0  0182c5cb  019081eb  02311a90  0273ad33  02ba0a83  0323aa24  042951fb  045498d4  046a752d  0479fbc1  049d4c49  04a12678  050c8f84  054e2ed1  056407a9  067d721b  06b93a6b  076f40e5  0778b960  07da9f6f  085c3633  087d27c9  0918bbbe  098bf1b5  09e8c331  09f7fb87  0a03740f  0a3f27a0  0aedc4dd  0b45f4eb  0b951aa8  0c55aa13  0d7ed9ed  0e849808  0e960baf  0ecb4f05  0f11503c  0fbf6786  (+817 more)
frontend/lib/: app.dart  main.dart
frontend/lib/models/: gaze_frame.dart  report.dart  session.dart  subject.dart  task_event.dart
frontend/lib/pages/: home_page.dart
frontend/lib/pages/reports/: history_page.dart
frontend/lib/pages/screening/: result_page.dart  running_page.dart  start_page.dart
frontend/lib/pages/subjects/: subject_create_dialog.dart  subjects_list_page.dart
frontend/lib/pages/training/: training_page.dart
frontend/lib/services/: app_state.dart  engine_client.dart
frontend/lib/theme/: app_colors.dart  app_theme.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
itraker/GazeTrack/model/: AFFNet.py
model/: convert_pupil_data.m  技术文档_model模块说明.md
model/adhd_pupil_classifier/: adhd_classifier.py  features.csv  results.json
model/adhd_pupil_classifier/saved_models/: feature_config.joblib  random_forest.joblib  scaler.joblib  svm_rbf.joblib  xgboost.joblib
model/eye_tracker/: adhd_inference.py  itracker.py  sternberg_task.py
scripts/: ablation_study.py  ablation_study.results.json  calibrate_attention_sigmoid.py  verify_attention_direction.py
tauri-adhd/: .gitignore  README.md  package-lock.json  package.json
tauri-adhd/models/: affnet.onnx  attention_sigmoid_params.json  face_detection.onnx  feature_baselines.json  iris_landmark.onnx  rf_model.json
tauri-adhd/scripts/: EyeTrackerClient.cs  export_affnet_onnx.py  eye_tracker_server.py
tauri-adhd/src/: app.css  app.html
tauri-adhd/src-tauri/: Cargo.toml  tauri.conf.json
tauri-adhd/src-tauri/src/: camera.rs  commands.rs  eye_tracker_server.rs  face_mesh.rs  game.rs  gaze_math.rs  inference.rs  lib.rs  main.rs  pipeline.rs  storage.rs
tauri-adhd/src-tauri/tests/: test_eye_server.rs
tauri-adhd/src/lib/components/: CalibrationCanvas.svelte  SternbergCanvas.svelte  TrainingCalibrationCanvas.svelte
tauri-adhd/src/lib/stores/: session.js
tauri-adhd/src/routes/: +layout.svelte  +page.svelte
tauri-adhd/src/routes/reports/: +page.svelte
tauri-adhd/src/routes/screening/: +page.svelte
tauri-adhd/src/routes/screening/result/: +page.svelte
tauri-adhd/src/routes/screening/running/: +page.svelte
tauri-adhd/src/routes/subjects/: +page.svelte
tauri-adhd/src/routes/subjects/create/: +page.svelte
tauri-adhd/src/routes/training/: +page.svelte
