[project]
name = "adhd-engine"
version = "0.1.0"
description = "ADHD early-screening engine: gaze tracking + Sternberg paradigm + RF inference, exposed via FastAPI/WebSocket"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web service
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "python-multipart>=0.0.12",

    # Storage
    "sqlmodel>=0.0.22",
    "platformdirs>=4.3",

    # Inherited from model/ pipeline (must match the venv installed earlier)
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "xgboost",
    "joblib",
    "torch",
    "torchvision",
    "opencv-python",
    "mediapipe",
    "pygame",
    "Pillow",
    "matplotlib",          # used for cross-platform font lookup
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",         # FastAPI test client
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adhd_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
