[package]
name = "tauri-adhd"
version = "0.1.0"
description = "ADHD screening + training system — Rust backend"
authors = ["ADHD Research Team"]
edition = "2021"

[lib]
name = "tauri_adhd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri ──────────────────────────────────────────────────────────
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# ── Serialization ──────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── ML inference (pure Rust, no C++ deps) ──────────────────────────
# tract supports ONNX + TFLite natively. We use it for:
#   - affnet.onnx (AFFNet gaze estimation)
#   - face_detection.onnx (BlazeFace)
#   - face_landmark.tflite (MediaPipe FaceMesh)
#   - iris_landmark.onnx (iris refinement)
tract-onnx = "0.21"
tract-tflite = "0.21"

# ── Camera ─────────────────────────────────────────────────────────
nokhwa = { version = "0.10", features = ["input-native"] }

# ── Image processing ──────────────────────────────────────────────
image = "0.25"

# ── Linear algebra (Ridge regression, feature math) ────────────────
nalgebra = "0.33"
ndarray = "0.16"

# ── SQLite ─────────────────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Async runtime ─────────────────────────────────────────────────
tokio = { version = "1", features = ["rt", "sync", "time", "process"] }

# ── Utilities ──────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
parking_lot = "0.12"          # faster Mutex for the gaze pipeline shared state
log = "0.4"
env_logger = "0.11"
anyhow = "1"                  # ergonomic error handling
base64 = "0.22"               # for sending camera frames to frontend as data URLs
once_cell = "1.19"            # lazy static for DB singleton

[profile.release]
# Optimize for size — the user cares about small binaries
opt-level = "s"
lto = true
codegen-units = 1
strip = true
